调整各模块的依赖关系，以及数据分页调试