@@ -2,14 +2,14 @@ package com.witboot.app.user.executor.query;
 
 import com.witboot.app.user.assembler.UserAssembler;
 import com.witboot.client.user.dto.data.UserVO;
-import com.witboot.client.user.dto.query.UserListByParamQuery;
+import com.witboot.domain.base.model.PageResult;
 import com.witboot.domain.user.gateway.UserGateway;
 import com.witboot.domain.user.model.UserEntity;
+import com.witboot.domain.user.query.UserListByParamQuerySpec;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * UserListByParamQueryExe
@@ -22,11 +22,11 @@ public class UserListByParamQueryExe {
     @Autowired
     private UserGateway userGateway;
 
-    public List<UserVO> execute(UserListByParamQuery userListByParamQuery) {
-        List<UserEntity> userEntities = userGateway.findByParam(userListByParamQuery);
+    public PageResult<UserVO> execute(UserListByParamQuerySpec userListByParamQuerySpec) {
+        PageResult<UserEntity> userEntityPageResult = userGateway.findByParam(userListByParamQuerySpec);
 
-        return userEntities.stream()
-                .map(UserAssembler::toValueObject)
-                .collect(Collectors.toList());
+        List<UserVO> userVOList = userEntityPageResult.getList().stream().map(UserAssembler::toValueObject).toList();
+
+        return PageResult.build(userVOList, userEntityPageResult.getTotal());
     }
 }
